--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,13 @@
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".activity.MainActivity"
@@ -39,20 +41,11 @@
         </activity>
         <activity
             android:name=".activity.MovieTypeAction"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".activity.ProductDetailActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name=".activity.ShopCartActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name=".activity.ComfirmOrder"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
+        <activity android:name=".activity.ConfirmOrderActivity"></activity>
     </application>
 
 </manifest>
