--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,11 @@
         <activity
             android:name=".activity.ProductDetailActivity"
             android:label="@string/app_name"></activity>
-        <activity android:name=".activity.ConfirmOrderActivity"></activity>
+        <activity
+            android:name=".activity.ConfirmOrderActivity"
+            android:theme="@style/AppTheme.NoTitleBar"
+            >
+        </activity>
     </application>
 
 </manifest>
