--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,19 +20,6 @@
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
-        <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,16 +27,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MovieTypeAction"
-            android:label="@string/app_name"></activity>
-        <activity
-            android:name=".activity.ProductDetailActivity"
-            android:label="@string/app_name"></activity>
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity android:name=".activity.MovieTypeAction"></activity>
+        <activity android:name=".activity.ProductDetailActivity"></activity>
         <activity
             android:name=".activity.ConfirmOrderActivity"
-            android:theme="@style/AppTheme.NoTitleBar"
-            >
-        </activity>
+            android:theme="@style/AppTheme.NoTitleBar"></activity>
+        <activity android:name=".activity.AdminActivity"></activity>
     </application>
 
 </manifest>
